commit-info endpoint