@@ -2,14 +2,17 @@ package greencity.config;
 
 import static greencity.constant.AppConstant.*;
 import static greencity.constant.AppConstant.UBS_EMPLOYEE;
+
 import greencity.client.RestClientUser;
 import greencity.jwt.JwtTool;
 import greencity.security.providers.JwtAuthenticationProvider;
 import java.util.Arrays;
 import java.util.List;
+
 import static jakarta.servlet.http.HttpServletResponse.SC_FORBIDDEN;
 import static jakarta.servlet.http.HttpServletResponse.SC_UNAUTHORIZED;
 import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -30,7 +33,6 @@ import org.springframework.web.cors.CorsConfiguration;
 
 /**
  * Config for security.
- *
  */
 @Configuration
 @EnableWebSecurity
@@ -46,8 +48,8 @@ public class SecurityConfig {
      */
     @Autowired
     public SecurityConfig(JwtTool jwtTool, RestClientUser restClientUser,
-        AuthenticationConfiguration authenticationConfiguration,
-        @Value("${spring.messaging.stomp.websocket.allowed-origins}") String[] allowedOrigins) {
+                          AuthenticationConfiguration authenticationConfiguration,
+                          @Value("${spring.messaging.stomp.websocket.allowed-origins}") String[] allowedOrigins) {
         this.jwtTool = jwtTool;
         this.restClientUser = restClientUser;
         this.authenticationConfiguration = authenticationConfiguration;
@@ -70,17 +72,17 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
-            CorsConfiguration config = new CorsConfiguration();
-            config.setAllowedOriginPatterns(List.of(allowedOrigins));
-            config.setAllowedMethods(
-                Arrays.asList("GET", "POST", "OPTIONS", "DELETE", "PUT", "PATCH"));
-            config.setAllowedHeaders(
-                Arrays.asList("Access-Control-Allow-Origin", "Access-Control-Allow-Headers",
-                    "X-Requested-With", "Origin", "Content-Type", "Accept", "Authorization"));
-            config.setAllowCredentials(true);
-            config.setMaxAge(3600L);
-            return config;
-        }))
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOriginPatterns(List.of(allowedOrigins));
+                config.setAllowedMethods(
+                    Arrays.asList("GET", "POST", "OPTIONS", "DELETE", "PUT", "PATCH"));
+                config.setAllowedHeaders(
+                    Arrays.asList("Access-Control-Allow-Origin", "Access-Control-Allow-Headers",
+                        "X-Requested-With", "Origin", "Content-Type", "Accept", "Authorization"));
+                config.setAllowCredentials(true);
+                config.setMaxAge(3600L);
+                return config;
+            }))
             .csrf(AbstractHttpConfigurer::disable)
             .sessionManagement(session -> session.sessionCreationPolicy(STATELESS))
             .addFilterBefore(
@@ -106,6 +108,9 @@ public class SecurityConfig {
                     "/swagger-resources/**",
                     "/webjars/**",
                     "/chat/**")
+                .permitAll()
+                .requestMatchers(HttpMethod.GET,
+                    "/commit-info")
                 .permitAll()
                 .requestMatchers(HttpMethod.GET,
                     "/chat/create-chatRoom",
